syntax = "proto3";

package rover.event.v1;

option go_package = "event/v1;event";

import "google/protobuf/timestamp.proto";

import "protobuf/wrappers.proto";
import "protobuf/version.proto";
import "protobuf/struct.proto";
import "protobuf/timestamp.proto";

import "auth/v1/auth.proto";
import "audience/v1/audience.proto";

message DeviceContext {

	// string device_id            = 1;
	string profile_identifier   = 2;

	// Custom attributes
	// Should we use a struct
	rover.protobuf.Struct attributes = 3;

	string app_build                            = 4;
	string app_name                             = 5;
	string app_namespace                        = 6;
	string app_version                          = 7;
	rover.protobuf.Int32Value app_badge_number  = 8;

	string device_manufacturer  = 9;
	string device_model         = 10;

	rover.protobuf.BoolValue 				is_location_services_enabled  = 11;
	audience.v1.LocationAuthorization.Value location_authorization    	  = 12;

	string locale_language  = 13;
	string locale_region    = 14;
	string locale_script    = 15;

	string operating_system_name                    = 16;
	rover.protobuf.Version operating_system_version = 17;

	audience.v1.NotificationAuthorization.Value notification_authorization = 18;

	audience.v1.PushEnvironment.Value push_environment  = 19;
	string push_token                                   = 20;


	string radio        = 21;
	string carrier_name = 22;
	string time_zone    = 23;
	string ip           = 24;

	rover.protobuf.BoolValue is_cellular_enabled    = 25;
	rover.protobuf.BoolValue is_wifi_enabled        = 26;

	int32 screen_width  = 27;
	int32 screen_height = 28;

	map<string,rover.protobuf.Version> frameworks = 29;

	string label = 30;
	string advertising_id = 31;

}

// Event generated by the SDK or an outside server
message EventInput {

	auth.v1.AuthContext auth_context = 1;

	string id   = 2;
	string name = 3;

	// the timestamp the event was generated by the caller
	// use our custom timestamp to preserve timezone offset
	rover.protobuf.Timestamp timestamp     = 4;
	// represents when the gateways received this event
	google.protobuf.Timestamp received_at   = 5;

	// free form attributes representing JSON data
	rover.protobuf.Struct attributes = 6;

	oneof type {
		DeviceEventInput device_event_input = 7;
		ProfileEventInput profile_event_input = 8;
	}
}

// A SDK (device) generated event 
message DeviceEventInput {
	string 	device_id			= 1;
	DeviceContext context 		= 2;
}

// A profile generate event
// These events are generated from client servers. eg the patriots send us ticket scanned event where the identifier is the user's email
message ProfileEventInput {
	string profile_identifier = 1;
}

// An event that has been transformed by the transformer and is ready to be accepted by the rest of the system
message Event {
	EventInput input = 1;

	// represents when the event was processed by the transformer
	google.protobuf.Timestamp processed_at  = 2;

	oneof source {
		DeviceSource  device_source = 3;
		ProfileSource profile_source = 4;
	}
}

message DeviceSource {
	audience.v1.Device  device             = 1;
	audience.v1.Profile associated_profile = 2;
}

message ProfileSource {
	audience.v1.Profile         profile            = 1;
	repeated audience.v1.Device associated_devices = 2;
}

